# advent-of-code

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conda-environment.yml  main.py  pyproject.toml  requirements.txt
advent_of_code/aoc_2022/day_1/: d1.py
advent_of_code/aoc_2022/day_10/: d10.py
advent_of_code/aoc_2022/day_11/: d11.py
advent_of_code/aoc_2022/day_12/: d12.py
advent_of_code/aoc_2022/day_2/: d2.py
advent_of_code/aoc_2022/day_3/: d3.py
advent_of_code/aoc_2022/day_4/: d4.py
advent_of_code/aoc_2022/day_5/: d5.py
advent_of_code/aoc_2022/day_6/: d6.py
advent_of_code/aoc_2022/day_7/: d7.py
advent_of_code/aoc_2022/day_8/: d8.py
advent_of_code/aoc_2022/day_9/: d9.py
advent_of_code/aoc_2023/day_1/: d1.py
advent_of_code/aoc_2023/day_10/: d10.py
advent_of_code/aoc_2023/day_11/: d11.py
advent_of_code/aoc_2023/day_12/: d12.py
advent_of_code/aoc_2023/day_13/: d13.py
advent_of_code/aoc_2023/day_14/: d14.py
advent_of_code/aoc_2023/day_15/: d15.py
advent_of_code/aoc_2023/day_16/: d16.py
advent_of_code/aoc_2023/day_17/: d17.py
advent_of_code/aoc_2023/day_18/: d18.py
advent_of_code/aoc_2023/day_19/: d19.py
advent_of_code/aoc_2023/day_2/: d2.py
advent_of_code/aoc_2023/day_20/: d20.py
advent_of_code/aoc_2023/day_21/: d21.py
advent_of_code/aoc_2023/day_22/: d22.py
advent_of_code/aoc_2023/day_23/: d23.py
advent_of_code/aoc_2023/day_24/: d24.py
advent_of_code/aoc_2023/day_25/: d25.py
advent_of_code/aoc_2023/day_3/: d3.py
advent_of_code/aoc_2023/day_4/: d4.py
advent_of_code/aoc_2023/day_5/: d5.py
advent_of_code/aoc_2023/day_6/: d6.py
advent_of_code/aoc_2023/day_7/: d7.py
advent_of_code/aoc_2023/day_8/: d8.py
advent_of_code/aoc_2023/day_9/: d9.py
advent_of_code/aoc_2024/: d1.py  d10.py  d13.py  d14.py  d15.py  d16.py  d17.py  d2.py  d3.py  d4.py  d5.py  d6.py
advent_of_code/aoc_2025/: d1.py  d10.py  d11.py  d12.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
advent_of_code/commons/: commons.py
aoc_2022/commons/: commons.py
aoc_2022/day_1/: d1.py
aoc_2022/day_10/: d10.py
aoc_2022/day_2/: d2.py
aoc_2022/day_3/: d3.py
aoc_2022/day_4/: d4.py
aoc_2022/day_5/: d5.py
aoc_2022/day_6/: d6.py
aoc_2022/day_7/: d7.py
aoc_2022/day_8/: d8.py
aoc_2022/day_9/: d9.py
aoc_2023/commons/: commons.py
aoc_2023/day_1/: d1.py
aoc_2023/day_10/: d10.py
aoc_2023/day_11/: d11.py
aoc_2023/day_2/: d2.py
aoc_2023/day_3/: d3.py
aoc_2023/day_4/: d4.py
aoc_2023/day_5/: d5.py
aoc_2023/day_6/: d6.py
aoc_2023/day_7/: d7.py
aoc_2023/day_8/: d8.py
aoc_2023/day_9/: d9.py
