[tool.poetry]
name = "advent-of-code"
version = "1.2.0"
description = "Advent of code"
authors = ["DSNJTurtle <sebastian.t.kirchner@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.1.3"
numpy = ">=1.26.2"
seaborn = ">=0.13.0"
pandas-stubs = ">=2.1.1.230928"
scipy = ">=1.11.4"
networkx = ">=3.2.1"
tqdm = ">=4.66.1"
joblib = "^1.3.2"
primefac = "^2.0.12"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
black = ">=23.11.0"
pre-commit = ">=3.5.0"
commitizen = ">=3.12.0"
isort = "^5.12.0"

[tool.black]
line-length = 110
force-exclude = """
(
    | ^/3 # exclude folder oncreated by GitHub actions
)
"""

[tool.isort]
profile = "black"
skip = [".gitignore", "3"]
src_paths = ["advent_of_code", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
log_cli = true
log_cli_level = "INFO"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
