[project]
name = "advent-of-code"
version = "1.4.0"
description = "Advent of code"
authors = [
    { name = "DSNJTurtle", email = "sebastian.t.kirchner@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pandas (>=2.1.3)",
    "numpy (>=1.26.2)",
    "seaborn (>=0.13.0)",
    "pandas-stubs (>=2.1.1.230928)",
    "scipy (>=1.11.4)",
    "networkx (>=3.2.1)",
    "tqdm (>=4.66.1)",
    "joblib (>=1.3.2)",
    "primefac (>=2.0.12)",
    "sympy (>=1.12)",
    "advent-of-code-data (>=2.1.0,<3.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>8.1.0)",
    "pre-commit (>=3.6.0)",
    "commitizen (>=3.12.0)",
    "ruff (>=0.3.0)",
    "pytype (>=2024.2.27)"
]

[tool.pytype]
inputs = ['advent_of_code']
jobs = 'auto'

[tool.ruff]
line-length = 120
src = ["advent_of_code", "tests"]
preview = true

[tool.ruff.lint]
select = ["E3", "E4", "E7", "E9", "F", "D"]
extend-select = ["B", "A", "SIM", "I", "D204", "D209", "D213", "D410", "D413", "W293", "W505", "PD", "NPY"]
extend-ignore = ["D212", "D100", "D102", "D103", "D104", "D105", "D107", "PD008", "PD901", "PD010", "PD101"]
extend-fixable = ["D", "W505", "W293"]
preview = true

[tool.ruff.format]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
log_cli = true
log_cli_level = "INFO"


[build-system]
requires = ["poetry-core>2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
